--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     />
   </head>
   <body>
-    <h1 class="heading-one">This is new year assignment for one</h1>
+    <!-- Banner Section -->
+    <section class="banner">
+      <div class="banner-img">
+        <div class="overlay"></div>
+        <img src="./images/Banner Image.png" alt="banner-img" />
+      </div>
+      <div class="banner-content">
+        <h3>Happy New Year</h3>
+        <h1 class="bannerH1">
+          New Year Party <br />
+          Celebration
+        </h1>
+      </div>
+    </section>
   </body>
 </html>
