--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
         </h1>
       </div>
     </section>
+    <!-- 65% off All Categories -->
+    <section>
+      <div class="all-categories">
+        <h1>65% OFF</h1>
+        <h3>OUR HOLIDAY DEALS ARE BETTER</h3>
+        <h2>ALL CATEGORIES</h2>
+      </div>
+      <div>
+        <img src="./images/New Year Photo.png" />
+      </div>
+    </section>
   </body>
 </html>
