--- a/index.html
+++ b/index.html
@@ -40,5 +40,22 @@
         <img src="./images/New Year Photo.png" />
       </div>
     </section>
+    <!-- Welcome to Midnight Party -->
+    <section class="midnight-party">
+      <div>
+        <img src="./images/Vectorrr.png" />
+      </div>
+      <div class="midnight-party-content">
+        <h1>
+          Welcome to <br />
+          midnight party
+        </h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+          risus ut pellentesque vel euismod.
+        </p>
+        <button>JOIN NOW</button>
+      </div>
+    </section>
   </body>
 </html>
