place time section done

--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <title>New Year New Mission</title>
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css" />
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- Banner Section -->
@@ -55,6 +48,32 @@
           risus ut pellentesque vel euismod.
         </p>
         <button>JOIN NOW</button>
+      </div>
+    </section>
+    <!-- Place Time -->
+    <section class="place-time">
+      <h1><span>Place:</span> New Park Hotel</h1>
+      <h1><span>Date:</span> 31 December Night 2023</h1>
+      <h1><span>Time:</span> Evening 7.30pm to 12.30am</h1>
+      <button>JOIN NOW</button>
+    </section>
+    <!-- Best Offer Coming Soon -->
+    <section class="best-offer">
+      <div>
+        <h3>New Best Offer</h3>
+        <h1>Coming Soon</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+          risus ut pellentesque vel euismod.
+        </p>
+      </div>
+      <div>
+        <img src="./images/Ellipse 1.png" />
+      </div>
+      <div>
+        <h1>2024</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+        <img src="./images/Group 96.png" />
       </div>
     </section>
   </body>
